# todds_typecasting

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_todds_typecasting.py
todds_typecasting/: __init__.py  todds_typecasting.py
